add Orion 5.1 scheduler